add-item-requests-and-gateway 16 sprint